--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                 <ul class="overlayNav">
                     <li><a href="index.html" data-text="Home">Home</a></li>
                     <li><a href="https://github.com/mmartinez1468" target="_blank" data-text="Projects">Projects</a></li>
-                    <li><a href="about.html" target="_blank" data-text="About">About</a></li>
+                    <li><a href="about.html" target="_blank">About</a></li>
                     <li><a href="https://1drv.ms/b/c/116e6123e49db96d/ETDOVGldezJJv_VoIUfff_QB-i_3qPjKT7CEWaBGynnPdA" target="_blank" data-text="Resume">Resume</a></li>
                 </ul>
             </nav>
