--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <main>
       <section class="header">
         <a href="../index/index.html">
-            <img src="../index/images/logoImage.png" class="logoIndex">
+            <img src="images/logoImage.png" class="logoIndex">
         </a>
     
         <div class="headerSeperate">|</div>
@@ -58,7 +58,7 @@
               <span class="spanIntro">
                 Italy - May 2023
               </span>
-              <img src="../index/images/me2.jpeg" alt="beach" class="marcosImg">
+              <img src="images/me2.jpeg" alt="beach" class="marcosImg">
             </div>
         </div>
       </section>
@@ -89,7 +89,7 @@
             <span class="spanIntro">
               210 Pounds - 2023
             </span>
-            <img src="../index/images/fat.jpg" alt="2023 Marcos" class="marcosImg">
+            <img src="images/fat.jpg" alt="2023 Marcos" class="marcosImg">
           </div>
         </div>
       </section>
@@ -121,7 +121,7 @@
             <span class="spanIntro">
               Big Brother
             </span>
-            <img src="../index/images/me.jpeg" alt="2023 Marcos" class="marcosImg">
+            <img src="images/me.jpeg" alt="2023 Marcos" class="marcosImg">
           </div>
         </div>
       </section>
@@ -152,7 +152,7 @@
             <span class="spanIntro">
               Anfield, Liverpool - December 2024
             </span>
-            <img src="../index/images/thumbnail_image0.jpg" alt="2023 Marcos" class="marcosJumpImg">
+            <img src="images/thumbnail_image0.jpg" alt="2023 Marcos" class="marcosJumpImg">
           </div>
         </div>
       </section>
@@ -180,22 +180,22 @@
             <ul class="contactLinks fadeInDown">
                 <li class="contactButtonOverlay">
                     <a href="https://github.com/mmartinez1468" target="_blank">
-                        <img src="../index/images/git.logo.png" class="githubButton" alt="GitHub Logo">
+                        <img src="images/git.logo.png" class="githubButton" alt="GitHub Logo">
                     </a>
                 </li>
                 <li class="contactButtonOverlay">
                     <a href="mailto:marcosmartinez16@icloud.com" target="_blank">
-                        <img src="../index/images/email-and-mail-icon-black-free-png.webp" class="emailButton" alt="Email Icon">
+                        <img src="images/email-and-mail-icon-black-free-png.webp" class="emailButton" alt="Email Icon">
                     </a>
                 </li>
                 <li class="contactButtonOverlay">
                     <a href="https://www.instagram.com/marquitoss1892/" target="_blank">
-                        <img src="../index/images/instagram.png" class="instaButton" alt="Instagram Logo">
+                        <img src="images/instagram.png" class="instaButton" alt="Instagram Logo">
                     </a>
                 </li>
                 <li class="contactButtonOverlay">
                     <a href="https://www.linkedin.com/in/marcos-martinez-928b86301/" target="_blank">
-                        <img src="../index/images/file (3).png" class="linkedinButton" alt="LinkedIn Logo">
+                        <img src="images/file (3).png" class="linkedinButton" alt="LinkedIn Logo">
                     </a>
                 </li>
             </ul>
@@ -204,9 +204,9 @@
         <!-- Overlay Navigation -->
         <nav class="overlayLanding">
             <ul class="overlayNav fadeInUp">
-                <li><a href="../index/index.html" data-text="Home">Home</a></li>
+                <li><a href="index.html" data-text="Home">Home</a></li>
                 <li><a href="https://github.com/mmartinez1468" target="_blank" data-text="Projects">Projects</a></li>
-                <li><a href="../about/about.html" target="_blank" data-text="About">About</a></li>
+                <li><a href="about.html" target="_blank" data-text="About">About</a></li>
                 <li><a href="https://1drv.ms/b/c/116e6123e49db96d/ETDOVGldezJJv_VoIUfff_QB-i_3qPjKT7CEWaBGynnPdA?e=B11aKQ" target="_blank" data-text="Resume">Resume</a></li>
             </ul>
         </nav>
