--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
     <main>
       <section class="header">
-        <a href="../index/index.html">
+        <a href="index.html">
             <img src="images/logoImage.png" class="logoIndex">
         </a>
     
