--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <main>
       <section class="header">
         <a href="index.html">
-            <img src="images/logoImage.png" class="logoIndex">
+            <img src="/images/logoImage.png" class="logoIndex">
         </a>
     
         <div class="headerSeperate">|</div>
