--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <main>
       <section class="header">
         <a href="index.html">
-            <img src="/images/logoImage.png" class="logoIndex">
+            <img src="images/logoImage.png" class="logoIndex">
         </a>
     
         <div class="headerSeperate">|</div>
@@ -161,8 +161,8 @@
               
         <!-- Overlay Header -->
         <div class="overlayHeader">
-            <a href="../index/index.html">
-                <img src="../index/images/logoImage.png" class="logoIndex">
+            <a href="index.html">
+                <img src="images/logoImage.png" class="logoIndex">
             </a>
             <div class="headerSeperate">|</div>
             <div class="headerIndexButton">
